apps/base/discourse/discourse.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: discourse-system
  labels:
    networking.tinyrack.net/isolation: enabled
