apps/base/discourse/discourse.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discourse-service
  namespace: discourse-system
spec:
  selector:
    app: discourse
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
