apps/base/discourse/discourse.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discourse-ingress
  namespace: discourse-system
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: forum.tinyrack.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discourse-service
                port:
                  name: http

  tls:
    - hosts:
        - "forum.tinyrack.net"
      secretName: letsencrypt-cert
